Fix scrollbar

--- a/main.css
+++ b/main.css
@@ -266,7 +266,7 @@ body {
 	display: flex;
 	flex-direction: row;
 	gap: 15px;
-	overflow-x: scroll;
+	overflow-x: auto;
 }
 
 .project-urls a {
